--- a/ejercicio.html
+++ b/ejercicio.html
@@ -11,32 +11,8 @@
     />
 
     
-    <style id="coffeeFloatStyle">
-/* ☕ Floating coffee (global) */
-#coffeeFloat{
-  position: absolute;
-  right: -40px;
-  top: 360px;
-  width: 420px;
-  height: 420px;
-  pointer-events: none;
-  opacity: 0.9;
-  filter: drop-shadow(0 20px 40px rgba(0,0,0,0.35));
-  animation: coffeeFloat 7s ease-in-out infinite;
-  transform-origin: 50% 60%;
-  z-index: 1;
-}
-#coffeeFloat svg{ width:100%; height:100%; display:block; }
-@keyframes coffeeFloat{
-  0%   { transform: translateY(0px) translateX(0px) rotate(-1deg) scale(1); }
-  50%  { transform: translateY(-18px) translateX(-6px) rotate(1deg) scale(1.02); }
-  100% { transform: translateY(0px) translateX(0px) rotate(-1deg) scale(1); }
-}
-@media (max-width: 980px){
-  #coffeeFloat{ display:none; }
-}
-</style>
-<link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+  <script src="assets/js/layout.js" type="module"></script>
 </head>
 
   <body data-page="ejercicio">
@@ -80,7 +56,6 @@
         <div id="lessonContentBody" class="lessonText"></div>
         <div id="lessonContentEmpty" class="lessonEmpty" style="display:none">Todavía no hay contenido de lección para este tema.</div>
       </div>
-
 
       <div class="sectionTitle">🧩 Ejercicios</div>
 
@@ -161,114 +136,6 @@
       </div>
     </div>
 
-<script type="module" src="assets/js/pages/ejercicio-page.js"></script>
-    <script src="assets/js/layout.js" defer></script>
-
-<script>
-(function(){
-  const GLOBAL_KEY = "AV_COFFEE_CFG_GLOBAL";
-  const PREFIX = "AV_COFFEE_CFG::";
-
-  const el = document.getElementById("coffeeFloat");
-  if(!el) return;
-
-  const defaults = {
-    enabled: true,
-    anchor: "right",     // "right" or "left"
-    x: -40,              // right/left (px)
-    y: 360,              // top (px)
-    size: 420,           // px
-    opacity: 0.9,        // 0..1
-    z: 1,                // z-index
-    hideMobile: true
-  };
-
-  function clamp(n,min,max){ n=Number(n); if(Number.isNaN(n)) return min; return Math.min(max, Math.max(min, n)); }
-  function safePath(){
-    try{
-      const p = (location && location.pathname) ? location.pathname : "";
-      return p.replace(/[^a-z0-9_\-./]/gi,"_");
-    }catch(e){ return ""; }
-  }
-  function pageKey(){ return PREFIX + safePath(); }
-
-  function readJSON(key){
-    try{
-      const raw = localStorage.getItem(key);
-      if(!raw) return null;
-      return JSON.parse(raw);
-    }catch(e){ return null; }
-  }
-
-  function loadCfg(){
-    const g = readJSON(GLOBAL_KEY) || {};
-    const p = readJSON(pageKey()) || {};
-    return { ...defaults, ...g, ...p };
-  }
-
-  function applyCfg(cfg){
-    cfg = { ...defaults, ...cfg };
-
-    if(!cfg.enabled){
-      el.style.display = "none";
-      return;
-    }else{
-      el.style.display = "";
-    }
-
-    el.style.top = (Number(cfg.y)||defaults.y) + "px";
-
-    const x = Number(cfg.x);
-    if(cfg.anchor === "left"){
-      el.style.left = (Number.isFinite(x)?x:defaults.x) + "px";
-      el.style.right = "auto";
-    }else{
-      el.style.right = (Number.isFinite(x)?x:defaults.x) + "px";
-      el.style.left = "auto";
-    }
-
-    const size = clamp(cfg.size, 120, 900);
-    el.style.width = size + "px";
-    el.style.height = size + "px";
-    el.style.opacity = clamp(cfg.opacity, 0.05, 1);
-    el.style.zIndex = String(Number(cfg.z)||defaults.z);
-
-    // hide mobile toggle (overrides CSS media query)
-    if(cfg.hideMobile === false){
-      el.style.setProperty("display","", "important");
-    }
-  }
-
-  function saveCfg(cfg, scope){
-    const key = (scope === "page") ? pageKey() : GLOBAL_KEY;
-    localStorage.setItem(key, JSON.stringify(cfg));
-  }
-
-  function clearCfg(scope){
-    const key = (scope === "page") ? pageKey() : GLOBAL_KEY;
-    localStorage.removeItem(key);
-  }
-
-  // expose for admin page
-  window.AV_Coffee = {
-    GLOBAL_KEY,
-    PREFIX,
-    defaults,
-    safePath,
-    pageKey,
-    load: loadCfg,
-    apply: applyCfg,
-    save: saveCfg,
-    clear: clearCfg
-  };
-
-  applyCfg(loadCfg());
-
-  window.addEventListener("storage", (e)=>{
-    if(!e || !e.key) return;
-    if(e.key === GLOBAL_KEY || e.key === pageKey()) applyCfg(loadCfg());
-  });
-})();
-</script>
+  <script type="module" src="assets/js/pages/ejercicio-page.js"></script>
 </body>
 </html>
