--- a/espanel.html
+++ b/espanel.html
@@ -75,7 +75,6 @@
               color: #fff;
             }
 
-
             .pill-expired {
               background: rgba(255, 80, 80, 0.25);
               color: #ff8080;
@@ -143,7 +142,6 @@
               margin-top: 12px;
               display:none;
             }
-
 
             /* Course tiles (match homepage pricing style) */
             .course-tile{
@@ -241,17 +239,9 @@
 
             /* Coffee cup forced white */
 
-
-
-
             /* Coffee cup forced white */
 
-
-
-
-
             /* Coffee cup correct + white */
-
 
             /* Floating coffee on background */
             #coffeeFloat {
@@ -269,7 +259,6 @@
             @media (max-width: 980px) {
               #coffeeFloat { display:none; }
             }
-
 
             /* Floating coffee (gentle, background) */
             #coffeeFloat {
@@ -342,7 +331,6 @@
             }
             .btn-icon:hover{ transform: translateY(-1px); }
 
-
             /* ===== Settings modal (Planes/Precios + Promos) ===== */
             #settingsModal { display:none; position:fixed; inset:0; z-index:9999; align-items:center; justify-content:center; padding:18px; background:rgba(0,0,0,.55); }
             #settingsModal .modalBox { width:min(980px, 100%); max-height:90vh; overflow:auto; background:rgba(10,20,45,.98); border:1px solid rgba(255,255,255,.12); border-radius:22px; box-shadow: 0 18px 60px rgba(0,0,0,.45); }
@@ -368,7 +356,8 @@
             @media (max-width: 760px){ #settingsModal .grid2, #settingsModal .grid3 { grid-template-columns: 1fr; } }
             #settingsModal, #settingsModal * { color:#fff; }
     </style>
-  </head>
+    <script src="assets/js/layout.js" type="module"></script>
+</head>
   <body>
     <div id="appHeader"></div>
     <main class="page">
@@ -476,38 +465,7 @@
         <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 28px">
           <!-- LEFT: courses -->
           <div class="courses-grid" id="coursesCards"></div>
-          <div
-            aria-hidden="true"
-            id="coffeeFloat"
-            style="
-              position: absolute;
-              right: -40px;
-              top: 120px;
-              width: 420px;
-              height: 420px;
-              pointer-events: none;
-              opacity: 0.9;
-              filter: drop-shadow(0 20px 40px rgba(0, 0, 0, 0.35));
-            "
-          >
-            <svg
-              class="w-72 h-72 mx-auto drop-shadow-2xl"
-              viewbox="0 0 200 200"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <defs>
-                <lineargradient
-                  id="cupGradient"
-                  x1="0%"
-                  x2="0%"
-                  y1="0%"
-                  y2="100%"
-                >
-                  <stop
-                    offset="0%"
-                    style="stop-color: #8b4513; stop-opacity: 1"
-                  ></stop>
-                  <stop
+          <stop
                     offset="100%"
                     style="stop-color: #654321; stop-opacity: 1"
                   ></stop>
@@ -1094,19 +1052,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="assets/js/pages/panel-page.js"></script>
-    <script>
-      // Enlazar el banner amarillo a course.html
-      const banner = document.querySelector('.yellow-banner');
-      if (banner) {
-        banner.style.cursor = 'pointer';
-        banner.addEventListener('click', () => {
-          window.location.href = 'course.html';
-        });
-      }
-    </script>
-    <script src="assets/js/layout.js"></script>
-
     <!-- ===== Admin: Edit course tiles (only title/subtitle) ===== -->
     <div id="metaModal" class="modal-backdrop" style="display: none">
       <div
@@ -1663,37 +1608,8 @@
       </div>
     </div>
 
-    <script data-aquivivo-no-new-tab="1">
-      // Force same-tab navigation (prevents accidental new tabs)
-      (function () {
-        try {
-          document.addEventListener('DOMContentLoaded', function () {
-            document
-              .querySelectorAll('a[target="_blank"]')
-              .forEach(function (a) {
-                a.removeAttribute('target');
-                var rel = (a.getAttribute('rel') || '')
-                  .split(/\s+/)
-                  .filter(Boolean);
-                rel = rel.filter(function (x) {
-                  return !(/^noopener$/i.test(x) || /^noreferrer$/i.test(x));
-                });
-                if (rel.length) a.setAttribute('rel', rel.join(' '));
-                else a.removeAttribute('rel');
-              });
-          });
-
-          var _open = window.open;
-          window.open = function (url, target) {
-            if (target && String(target).toLowerCase() === '_blank' && url) {
-              window.location.assign(url);
-              return null;
-            }
-            return _open.apply(window, arguments);
-          };
-        } catch (e) {}
-      })();
-    </script>
-  </body>
+    
+    <script type="module" src="assets/js/pages/panel-page.js"></script>
+</body>
 </html>
 
