--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <script src="assets/js/layout.js" type="module"></script>
 </head>
 
 <body data-page="lessonadmin">
@@ -25,7 +26,7 @@
         <a class="btn" id="btnBackCourse" href="#">⬅️ Curso</a>
         <a class="btn btn-yellow" id="btnOpenLesson" href="#">📖 Ver lección</a>
         <a class="btn" id="btnOpenExercises" href="#">🧩 Admin ejercicios</a>
-        <button class="btn btn-red" id="btnLogout" type="button">Cerrar sesión</button>
+        <button class="btn btn-red" id="btnLogoutLegacy" type="button">Cerrar sesión</button>
       </div>
     </div>
   </div>
@@ -144,8 +145,6 @@
     </div>
   </main>
 
-  <script type="module" src="assets/js/pages/lessonadmin-page.js"></script>
-
   <!-- Right dock: add blocks + defaults -->
   <div class="addDock" id="addDock">
     <div class="addDockTitle">➕ Añadir bloque <span style="opacity:.75;">(siempre visible)</span></div>
@@ -193,6 +192,6 @@
     </div>
   </div>
 
-  <script src="assets/js/layout.js"></script>
+    <script type="module" src="assets/js/pages/lessonadmin-page.js"></script>
 </body>
 </html>
