--- a/lessonpage.html
+++ b/lessonpage.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <script src="assets/js/layout.js" defer></script>
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+  <script src="assets/js/layout.js" type="module"></script>
 </head>
 
   <body data-page="lessonpage">
@@ -79,6 +79,6 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
-  </body>
+      <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
+</body>
 </html>
