--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
     .reset-link{ margin-top: 10px; display:inline-flex; align-items:center; gap: 10px; border:none; background:transparent; color:#003893; font-weight:900; cursor:pointer; text-decoration: underline; padding: 0; }
     .reset-link:hover{ opacity:.9; }
   </style>
+  <script src="assets/js/layout.js" type="module"></script>
 </head>
 <body data-page="login">
   <div id="appHeader"></div>
@@ -73,7 +74,6 @@
     </div>
   </main>
 
-  <script type="module" src="assets/js/auth.js"></script>
-  <script src="assets/js/layout.js" defer></script>
+    <script type="module" src="assets/js/auth.js"></script>
 </body>
 </html>
