--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -26,7 +26,7 @@
         <a class="btn" id="btnBackCourse" href="#">⬅️ Curso</a>
         <a class="btn btn-yellow" id="btnOpenLesson" href="#">📖 Ver lección</a>
         <a class="btn" id="btnOpenExercises" href="#">🧩 Admin ejercicios</a>
-        <button class="btn btn-red" id="btnLogoutLegacy" type="button">Cerrar sesión</button>
+        <button class="btn btn-red" id="btnLogout" type="button">Cerrar sesión</button>
       </div>
     </div>
   </div>
@@ -192,6 +192,7 @@
     </div>
   </div>
 
-    <script type="module" src="assets/js/pages/lessonadmin-page.js"></script>
+  
+  <script type="module" src="assets/js/pages/lessonadmin-page.js"></script>
 </body>
 </html>
