--- a/login.html
+++ b/login.html
@@ -74,6 +74,7 @@
     </div>
   </main>
 
+  <script type="module" src="assets/js/auth.js"></script>
     <script type="module" src="assets/js/auth.js"></script>
 </body>
 </html>
