--- a/lessonpage.html
+++ b/lessonpage.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css">
-  <script src="assets/js/layout.js" type="module"></script>
-</head>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="assets/js/layout.js" type="module"></script>
+  </head>
 
   <body data-page="lessonpage">
     <div id="appHeader"></div>
@@ -31,11 +31,7 @@
                 <span class="pill pill-yellow" id="pillLevel">Nivel: —</span>
                 <span class="pill" id="pillTopic">Tema: —</span>
                 <span class="pill" id="pillType" style="display: none"></span>
-                <span
-                  class="pill"
-                  id="pillDuration"
-                  style="display: none"
-                ></span>
+                <span class="pill" id="pillDuration" style="display: none"></span>
                 <span class="pill" id="pillPub" style="display: none"></span>
                 <a
                   class="pill"
@@ -79,7 +75,6 @@
       </div>
     </main>
 
-    
-  <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
-</body>
+    <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
+  </body>
 </html>
