--- a/course.html
+++ b/course.html
@@ -24,13 +24,14 @@
 
     <main class="page">
       <div class="container">
+        <div id="toast"></div>
         <!-- HERO -->
         <div class="heroBanner">
           <div class="heroTitleRow">
             <div class="heroIcon">🎓</div>
             <div>
               <h1 id="levelTitle">Nivel</h1>
-              <p class="subtitle">Cargando...</p>
+              <p class="subtitle" id="levelSubtitle">Cargando...</p>
             </div>
           </div>
 
